--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+P<!DOCTYPE html>
 <html lang="en">
 <head>
 <title>Page Title</title>
@@ -12,8 +12,8 @@ body {
 </head>
 <body>
 
-<h1>My Website</h1>
-<p>A website created by me.</p>
+<h1>The Perfect Website</h1>
+<p>Plus it works!.</p>
 
 </body>
 </html>
