--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="right">
             <div class="name">
-                <h1>GeeksforGeeks</h1>
+                <h1>Meraj Mammadov example example</h1>
             </div>
             <div class="title">
                 <p>Web Developer</p>
