removing the unnecessary parts, adding intro

--- a/index.html
+++ b/index.html
@@ -35,50 +35,41 @@
             </div>
             <div class="Contact">
                 <h2>Contact</h2>
-                <p><b>Email id:</b>xyz@gmail.com</p>
-                <p><b>Mobile no :</b>1234567890</p>
+                <p><b>Email id:</b>meraccos@gmail.com</p>
+                <p><b>Mobile no :</b>+82-010-7369-4499</p>
             </div>
             <div class="Skills">
                 <h2>Skills</h2>
-                <ul>
-                    <li><b>Programming Languages : 
-                      Python, Java, C++</b></li>
-                    <li><b>Frontend : HTML5, CSS3, 
-                      JavaScript, React</b></li>
-                    <li><b>Backend : Node.js</b></li>
-                </ul>
+
             </div>
             <div class="Language">
                 <h2>Language</h2>
-                <ul>
-                    <li>English</li>
-                    <li>Hindi</li>
-                </ul>
+
             </div>
             <div class="Hobbies">
                 <h2>Hobbies</h2>
                 <ul>
-                    <li>Playing cricket</li>
-                    <li>Swimming</li>
                 </ul>
             </div>
         </div>
         <div class="right">
             <div class="name">
-                <h1>Meraj Mammadov example example</h1>
+                <h1>Meraj Mammadov  </h1>
             </div>
-            <div class="title">
-                <p>Web Developer</p>
+            <div class="title"> <br>
+                <p>Robotics Engineer</p>
             </div>
-            <div class="Summary">
-                <h2>Summary</h2>
-                <p>To secure a challenging position in a 
-                  reputable organization
-                    to expand my learning knowledge and skill
+            <div class="Summary"> 
+                <h2>Summary</h2> <br>
+                <p>This website is in an early development phase and the data available here
+					is not accurate. Contact me for more details: <br> <br>
+					meraccos@gmail.com <br> <br>
+					www.linkedin.com/in/meraccos <br> <br>
+					www.github.com/meraccos
                 </p>
             </div>
-            <div class="Experience">
-                <h2>Experience</h2>
+            <!-- <div class="Experience"> -->
+                <!-- <h2>Experience</h2>
                 <h3>Abc webdev pvt ltd - Senior Web Developer</h3>
                 <p>January 2022 to Present</p>
                 <ul>
@@ -93,17 +84,20 @@
                       design and development.</li>
                     <li>Designing project & planing</li>
                     <li>Working on designing</li>
-                </ul>
-            </div>
-            <div class="Education">
-                <h2>Education</h2>
+                </ul> -->
+            <!-- </div> -->
+            <!-- <div class="Education"> -->
+                <!-- <h2>Education</h2>
                 <table>
                     <tr>
-                        <th>University/college  </th>
-                        <th>Passing year  </th>
-                        <th>percentage/cgpa</th>
-                    </tr>
-                    <tr>
+                        <th>Ulsan<td>
+						<th>National<td>
+								<th>Institute<td>
+							National University of Science</th>
+                        <!-- <th>Passing year  </th>
+                        <th>percentage/cgpa</th> -->
+                    <!-- </tr> -->
+                    <!-- <tr>
                         <td>xyz</td>
                         <td>2020</td>
                         <td>8.9</td>
@@ -112,9 +106,9 @@
                         <td>pqr</td>
                         <td>2018</td>
                         <td>89%</td>
-                    </tr>
-                </table>
-            </div>
+                    </tr> -->
+                <!-- </table> --> -->
+            <!-- </div>
             <div class="project">
                 <ul>
                     <li>
@@ -128,7 +122,7 @@
                           & used React</p>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </div>
 </body>
