a new format, copy of resume

--- a/index.html
+++ b/index.html
@@ -1,76 +1,160 @@
+<!DOCTYPE html>
 <html lang="en">
-  
 <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TBMFN2J');</script>
-    <!-- End Google Tag Manager -->
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" 
-          content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="styles_parts.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Meraj Mammadov - Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-  
-
-
-
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TBMFN2J"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    
-    <div class="full">
-        <div class="left">
-            <div class="image">
-                <img src=
-"https://i.imgur.com/6VSzK8o.jpeg?1" 
-                     alt="gfg-logo"
-                     style="width:100px;height:130px;">
-            </div>
-            <div class="Contact">
-                <h2>Contact</h2>
-                <p><b>Email id:</b>meraccos@gmail.com</p>
-                <p><b>Mobile no :</b>+82-010-7369-4499</p>
-            </div>
-            <div class="Skills">
-                <h2>Skills</h2>
-
-            </div>
-            <div class="Language">
-                <h2>Language</h2>
-
-            </div>
-            <div class="Hobbies">
-                <h2>Hobbies</h2>
-                <ul>
-                </ul>
-            </div>
-        </div>
-        <div class="right">
-            <div class="name">
-                <h1>Meraj Mammadov  </h1>
-            </div>
-            <div class="title"> <br>
-                <p>Robotics Engineer</p>
-            </div>
-            <div class="Summary"> 
-                <h2>Summary</h2> <br>
-                <p>This website is in an early development phase and the data available here
-					is not accurate. Contact me for more details: <br> <br>
-					meraccos@gmail.com <br> <br>
-					www.linkedin.com/in/meraccos <br> <br>
-					www.github.com/meraccos
-                </p>
-            </div>
-        </div>
+  <header>
+    <div class="profile-image">
+      <img src="https://i.imgur.com/6VSzK8o.jpeg?1" alt="Meraj Mammadov">
     </div>
+    <div class="profile-info">
+      <h1>Meraj Mammadov</h1>
+      <h3>Mechanical and Aerospace Engineering | Computer Science and Engineering</h3>
+      <p>
+        +82 10 7369 4499 | <a href="mailto:meraccos@gmail.com">meraccos@gmail.com</a> | <a href="https://linkedin.com/in/meraccos" target="_blank">LinkedIn</a> | <a href="https://github.com/meraccos" target="_blank">GitHub</a> | <a href="https://merajm.com" target="_blank">merajm.com</a>
+      </p>
+    </div>
+  </header>
+  <main>
+    <section class="education">
+      <h2>Education</h2>
+      <div class="
+      <div class="unist">
+        <h3>Ulsan National Institute of Science and Technology (UNIST), South Korea</h3>
+        <p class="degree">Bachelor of Engineering in Mechanical and Aerospace Engineering</p>
+        <p class="minor">Minor in Computer Science and Engineering</p>
+        <p class="date">Graduation: Jun 2023 (Expected)</p>
+        <p class="gpa">GPA: 93.10</p>
+      </div>
+    </section>
+    <section class="skills">
+      <h2>Skills</h2>
+      <div class="skill-group">
+        <h3>Software</h3>
+        <ul>
+          <li>SolidWorks</li>
+          <li>CATIA</li>
+          <li>REFPROP</li>
+          <li>Aspen HYSYS</li>
+          <li>LabVIEW</li>
+          <li>Docker</li>
+          <li>Gazebo</li>
+          <li>ROS 2</li>
+        </ul>
+      </div>
+      <div class="skill-group">
+        <h3>Hardware</h3>
+        <ul>
+            <li>Arduino</li>
+            <li>Oscilloscope</li>
+            <li>3D Printer</li>
+            <li>Soldering</li>
+            <li>Digital Multimeter</li>
+          </ul>
+        </div>
+        <div class="skill-group">
+          <h3>Programming languages</h3>
+          <ul>
+            <li>Python</li>
+            <li>C++</li>
+            <li>MATLAB(Simulink)</li>
+            <li>C</li>
+            <li>Modelica</li>
+            <li>Scala</li>
+          </ul>
+        </div>
+        <div class="skill-group">
+          <h3>Language skills</h3>
+          <ul>
+            <li>Azerbaijani (Native)</li>
+            <li>English (Proficient)</li>
+            <li>Turkish (Proficient)</li>
+            <li>German (Beginner)</li>
+          </ul>
+        </div>
+      </section>
+      <section class="experience">
+        <h2>Experience</h2>
+        <div class="job">
+          <h3>Introduction to AI Programming, UNIST - Teaching Assistant</h3>
+          <p class="job-duration">Mar 2023 - Present</p>
+          <ul>
+            <li>Tutor students on AI programming concepts and assist with their understanding of the course material.</li>
+            <li>Grade homework assignments and provide constructive feedback to help students improve their skills.</li>
+          </ul>
+        </
+    </div>
+    <div class="job">
+      <h3>Autonomous Systems Laboratory, UNIST - Research Assistant</h3>
+      <p class="job-duration">Mar 2022 - Present</p>
+      <p class="project">Project: UAV Safe Landing Simulation on Moving Targets using Reinforcement Learning</p>
+      <ul>
+        <li>Developed a novel IBVS algorithm for secure UAV landing, utilizing an innovative altitude estimation technique.</li>
+        <li>Constructed an oscillating helicopter pad on a mobile platform to test the algorithm under challenging conditions.</li>
+        <li>Integrated communication between Iris drone and Ground Control, developing control scripts for safe landing.</li>
+        <li>Mentored a team of 3 students to create a Gazebo simulation environment and establish communication with ROS2.</li>
+      </ul>
+    </div>
+    <div class="job">
+      <h3>BP, Rig Engineering Team, Baku Office - Summer Intern</h3>
+      <p class="job-duration">Jul 2022 - Sep 2022</p>
+      <p class="project">Project: Evaluating Red Zone Management Technologies for Deployment</p>
+      <ul>
+        <li>Performed technical and economic assessments of RZM systems, delivering comprehensive reports to management.</li>
+        <li>Organized meetings with manufacturers to obtain technical rig equipment data and ensure proper documentation and analysis.</li>
+        <li>Visited oil drilling platforms and warehouses, performing safety assessments to identify hazards for rig workers.</li>
+        <li>Researched equipment maintenance procedures and presented findings to the engineering team.</li>
+      </ul>
+    </div>
+    <div class="job">
+      <h3>Innovative Thermal Engineering Laboratory, UNIST - Research Assistant</h3>
+      <p class="job-duration">Jun 2021 - Jan 2022</p>
+      <p class="project">Project: Enhancing Organic Rankine Cycle Efficiency and Waste Heat Recovery</p>
+      <ul>
+        <li>Developed a custom Modelica library for static and dynamic FVM simulation of pumps, turbines, heat exchangers in ORC systems.</li>
+        <li>Implemented PID controllers to efficiently handle initialization errors, significantly enhancing simulation robustness and accuracy.</li>
+        <li>Designed a real-time MATLAB tool to visualize dynamic components' temperature-enthalpy graphs, improving system understanding.</li>
+        <li>Created and 3D printed a scroll pump and fuel cell prototype for showcasing the project at a university project exhibition.</li>
+      </ul>
+    </div>
+    <div class="job">
+      <h3>Brain to Society, InMobix team, UNIST - Team Member</h3>
+      <p class="job-duration">Jul 2021 - Dec 2021</p>
+      <p class="project">Project: Mechanical Device Design for Elderly Indoor Mobility Assistance</p>
+      <ul>
+        <li>Investigated existing mobility devices and their limitations by attending medical exhibitions and contacting relevant companies.</li>
+        <li>Conducted interviews with elderly and physicians to pinpoint key indoor mobility challenges for the elderly in South Korea.</li>
+        <li>Designed and presented two 3D models addressing frequent fall accidents in the elderly population at the 2021 U-Challengers Festival.</li>
+      </ul>
+    </div>
+  </section>
+  <section class="personal-projects">
+    <h2>Personal Projects</h2>
+    <ul>
+      <li>Developed a Gym environment for Tic-Tac-Toe and trained agents using Tabular, PPO, and DDQN reinforcement learning algorithms.</li>
+      <li>Built an obstacle-avoiding autonomous car with Arduino and ultrasonic sensors, implementing robust control algorithms.</li>
+      <li>Created a Python-based compartmental model for COVID-19 transmission, leveraging demographic data to predict virus spread.</li>
+    </ul>
+  </section>
+  <section class="achievements">
+    <h2>Achievements</h2>
+    <ul>
+        <li>Global UniStar Scholarship for Academic Excellence, UNIST - Sep 2019 - Present</li>
+        <li>Bronze Medalist in the 50th International Physics Olympiad, Tel-Aviv, Israel - Jul 2019</li>
+        <li>Gold Medalist in the National Physics Olympiad, Azerbaijan - Jun 2019</li>
+        <li>Participant in the 49th International Physics Olympiad, Lisbon, Portugal - Jul 2018</li>
+        <li>Silver Medalist in the National Physics Olympiad, Azerbaijan - May 2018</li>
+        <li>3rd Place in the 3rd International Metropolises Olympiad, Moscow, Russia - Sep 2018</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>+82 10 7369 4499 | meraccos@gmail.com | linkedin.com/in/meraccos | github.com/meraccos | merajm.com</p>
+  </footer>
 </body>
-
-<!-- <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fwww.merajm.com&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a> -->
 </html>
