--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <header>
     <div class="profile-image">
-      <img src="https://i.imgur.com/6VSzK8o.jpeg?1" alt="Meraj Mammadov">
+      <img class="profile-img" src="image.JPG" alt="Your Name" style="width: auto; height: auto; border-radius: 0;">
+      <!-- <img src="image.JPG" alt="Meraj Mammadov"> -->
     </div>
     <div class="profile-info">
       <h1>Meraj Mammadov</h1>
