change to image size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <header>
     <div class="profile-image">
-      <img class="profile-img" src="image.JPG" alt="Your Name" style="width: auto; height: auto; border-radius: 0;">
+      <img class="profile-img" src="image.JPG" alt="Your Name" style="width: auto; height: auto; border-radius: 0; 
+      max-width: 30%; width: 150px; height: 150px">
       <!-- <img src="image.JPG" alt="Meraj Mammadov"> -->
     </div>
     <div class="profile-info">
