removed the website itself from the contacts

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1>Meraj Mammadov</h1>
       <h3>Mechanical and Aerospace Engineering | Computer Science and Engineering</h3>
       <p>
-        +82 10 7369 4499 | <a href="mailto:meraccos@gmail.com">meraccos@gmail.com</a> | <a href="https://linkedin.com/in/meraccos" target="_blank">LinkedIn</a> | <a href="https://github.com/meraccos" target="_blank">GitHub</a> | <a href="https://merajm.com" target="_blank">merajm.com</a>
+        +82 10 7369 4499 | <a href="mailto:meraccos@gmail.com">meraccos@gmail.com</a> | <a href="https://linkedin.com/in/meraccos" target="_blank">LinkedIn</a> | <a href="https://github.com/meraccos" target="_blank">GitHub</a>
       </p>
     </div>
   </header>
