fixed the skills and removed one contact

--- a/index.html
+++ b/index.html
@@ -49,44 +49,45 @@
       <div class="skill-group">
         <h3>Software</h3>
         <ul>
-          <li>SolidWorks</li>
-          <li>CATIA</li>
+          <li>SolidWorks, CATIA, REFPROP, Aspen HYSYS, LabVIEW, Docker, Gazebo, ROS2</li>
+          <!-- <li>CATIA</li>
           <li>REFPROP</li>
           <li>Aspen HYSYS</li>
           <li>LabVIEW</li>
           <li>Docker</li>
           <li>Gazebo</li>
-          <li>ROS 2</li>
+          <li>ROS 2</li> -->
         </ul>
       </div>
       <div class="skill-group">
         <h3>Hardware</h3>
         <ul>
-            <li>Arduino</li>
-            <li>Oscilloscope</li>
+            <li>Arduino, Oscilloscope, 3D Printer, Soldering, Digital Multimeter</li>
+            <!-- <li>Oscilloscope</li>
             <li>3D Printer</li>
             <li>Soldering</li>
-            <li>Digital Multimeter</li>
+            <li>Digital Multimeter</li> -->
           </ul>
         </div>
         <div class="skill-group">
           <h3>Programming languages</h3>
           <ul>
-            <li>Python</li>
-            <li>C++</li>
+            <li>Python, C++, C, MATLAB(Simulink), Modelica, Scala</li>
+            <!-- <li>C++</li>
             <li>MATLAB(Simulink)</li>
             <li>C</li>
             <li>Modelica</li>
-            <li>Scala</li>
+            <li>Scala</li> -->
           </ul>
         </div>
         <div class="skill-group">
           <h3>Language skills</h3>
           <ul>
-            <li>Azerbaijani (Native)</li>
+            <li>Azerbaijani (Native), Turkish (Proficient), English (Proficient), German (Beginner)</li>
+            <!-- <li>Azerbaijani (Native)</li>
             <li>English (Proficient)</li>
             <li>Turkish (Proficient)</li>
-            <li>German (Beginner)</li>
+            <li>German (Beginner)</li> -->
           </ul>
         </div>
       </section>
@@ -166,7 +167,9 @@
     </section>
   </main>
   <footer>
-    <p>+82 10 7369 4499 | meraccos@gmail.com | linkedin.com/in/meraccos | github.com/meraccos | merajm.com</p>
+    <p>
+      +82 10 7369 4499 | <a href="mailto:meraccos@gmail.com">meraccos@gmail.com</a> | <a href="https://linkedin.com/in/meraccos" target="_blank">LinkedIn</a> | <a href="https://github.com/meraccos" target="_blank">GitHub</a>
+    </p>
   </footer>
 </body>
 </html>
