--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     gtag('config', 'G-ZHRFYB71LZ');
   </script>
 
+  <style>
+    body {
+    background-image: url('image.JPG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  </style>
+
     <link rel="stylesheet" href="styles_parts.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +27,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  
   <header>
     <div class="profile-image">
       <img class="profile-img" src="image.JPG" alt="Your Name" style="width: auto; height: auto; border-radius: 0; 
