--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- <img src="image.JPG" alt="Meraj Mammadov"> -->
     </div>
     <div class="profile-info">
-      <h1>Meraj Mammadov</h1>
+      <h1>Meraj Mammadov m</h1>
       <h3>Mechanical and Aerospace Engineering | Computer Science and Engineering</h3>
       <p>
         +82 10 7369 4499 | <a href="mailto:meraccos@gmail.com">meraccos@gmail.com</a> | <a href="https://linkedin.com/in/meraccos" target="_blank">LinkedIn</a> | <a href="https://github.com/meraccos" target="_blank">GitHub</a>
