--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     gtag('config', 'G-ZHRFYB71LZ');
   </script>
 
-  <!-- <style>
+  <style>
     body {
-    background-image: url('image.JPG');
+    background-image: url('background.JPG');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
-  </style> -->
+  </style>
 
-    <link rel="stylesheet" href="styles_parts.css">
+  <link rel="stylesheet" href="styles_parts.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meraj Mammadov - Portfolio</title>
