changed the projects style

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>
           Currently, I am working in Autonomous Systems Laboratory (ASL) under
           the supervision of Professor Hyondong Oh. I have previously worked in
-          Innovative Thermodynamics Laboratory (ITEL) with Professor Jaeson
+          Innovative Thermodynamics Laboratory (ITEL) with Professor Jaeseon
           Lee's supervision.
         </p>
         <p>
@@ -55,14 +55,9 @@
     <section class="projects">
       <h2>Projects</h2>
       <div class="project">
-        <h3>Project 1</h3>
-        <p>Description of Project 1...</p>
-        <a href="link-to-project-1">View Project</a>
-      </div>
-      <div class="project">
-        <h3>Project 2</h3>
-        <p>Description of Project 2...</p>
-        <a href="link-to-project-2">View Project</a>
+        <h3> To be added...</h3>
+        <!-- <h3> A very interesting project</h3> -->
+        <!-- <p>Description of a very interesting project will be here.</p> -->
       </div>
     </section>
 
