text alignment fixed

--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHRFYB71LZ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHRFYB71LZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-ZHRFYB71LZ');
+  </script>
 
-      gtag('config', 'G-ZHRFYB71LZ');
-    </script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meraj Mammadov</title>
-    <link rel="favicon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:400,700"
-      rel="stylesheet"
-      type="text/css"
-    />
-  </head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Meraj Mammadov</title>
+  <link rel="favicon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="styles.css" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Lato:400,700"
+    rel="stylesheet"
+    type="text/css"
+  />
+</head>
 
-  <body>
-    <header class="header">
-      <h1>Meraj Mammadov</h1>
-    </header>
-
+<body>
+  <div class="container">
+    <h1>Meraj Mammadov.</h1>
     <nav class="nav">
-      <a href="#Curriculum Vitae">Curriculum Vitae</a>
-      <a href="#contact">Contact</a>
+      <a href="#Curriculum Vitae">cv</a>
+      <a href="#merajpt">merajpt</a>
+      <a href="#chess">chess</a>
+      <a href="#contact">contact</a>
     </nav>
 
     <section class="about-me">
@@ -59,7 +59,7 @@
       </div>
       <img src="image.jpeg" alt="Meraj Mammadov" class="profile-picture" />
     </section>
-
+  
 
     <section class="projects">
       <h2>Projects</h2>
@@ -69,7 +69,6 @@
         <!-- <p>Description of a very interesting project will be here.</p> -->
       </div>
     </section>
-
-
-  </body>
+  </div>
+</body>
 </html>
