dark mode toggle added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       <a href="#merajpt">merajpt</a>
       <a href="#chess">chess</a>
       <a href="#contact">contact</a>
+
+
+      <div class="darkmode-container">
+        <input type="checkbox" id="darkmode-toggle"/> 
+        <label for="darkmode-toggle"></label>
+      </div>
+
+
+
     </nav>
 
     <section class="about-me">
