dark mode working, color not set yet

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <title>Meraj Mammadov</title>
   <link rel="favicon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="styles.css" />
+  <script src="scripts.js" defer></script>
   <link
     href="https://fonts.googleapis.com/css?family=Lato:400,700"
     rel="stylesheet"
@@ -33,9 +34,10 @@
 
 
       <div class="darkmode-container">
-        <input type="checkbox" id="darkmode-toggle"/> 
-        <label for="darkmode-toggle"></label>
+        <input type="checkbox" id="dark-mode-toggle"/> 
+        <label for="dark-mode-toggle"></label>
       </div>
+      <div id="mode-text">Light Mode</div>
 
 
 
