background color changed

--- a/index.html
+++ b/index.html
@@ -32,14 +32,10 @@
       <a href="#chess">chess</a>
       <a href="#contact">contact</a>
 
-
       <div class="darkmode-container">
         <input type="checkbox" id="dark-mode-toggle"/> 
         <label for="dark-mode-toggle"></label>
       </div>
-      <div id="mode-text">Light Mode</div>
-
-
 
     </nav>
 
@@ -52,8 +48,8 @@
           Engineering in UNIST.
         </p>
         <p>
-          Currently, I am working in Autonomous Systems Laboratory (ASL) under
-          the supervision of Professor Hyondong Oh. I have previously worked in
+          Currently, I am working in Autonomous Systems Laboratory (ASL) with
+          the group of Professor Hyondong Oh. I have previously worked in
           Innovative Thermodynamics Laboratory (ITEL) with Professor Jaeseon
           Lee's supervision.
         </p>
