final touches on the general layout

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
       <a href="#contact">contact</a>
 
       <div class="darkmode-container">
-        <input type="checkbox" id="dark-mode-toggle"/> 
-        <label for="dark-mode-toggle"></label>
+        <input type="checkbox" id="dark-mode-toggle"/>
+        <label for="dark-mode-toggle">
+        </label>
       </div>
 
     </nav>
@@ -43,15 +44,14 @@
       <div class="profile-description">
         <p>
           I am a first year Master's student of Mechanical Engineering at Ulsan
-          National Institute of Science and Engineering (UNIST). I have got my
-          Bachelor's Degree on Mechanical Engineering and Computer Science &
-          Engineering in UNIST.
+          National Institute of Science and Engineering (UNIST), where I also 
+          completed my Bachelor's Degree in Mechanical Engineering and Computer 
+          Science & Engineering.
         </p>
         <p>
           Currently, I am working in Autonomous Systems Laboratory (ASL) with
-          the group of Professor Hyondong Oh. I have previously worked in
-          Innovative Thermodynamics Laboratory (ITEL) with Professor Jaeseon
-          Lee's supervision.
+          the group of Professor Hyondong Oh. Prior to this, I worked in the 
+          Innovative Thermodynamics Laboratory (ITEL) with Professor Jaeseon Lee.
         </p>
         <p>
           I have also participated in several national and international Physics
@@ -60,22 +60,22 @@
         </p>
         <p>
           I am currently working on reinforcement learning and its applications
-          on robot autonomy. I am interested in a diverse variety of topics, so
-          feel free to reach out to discuss projects!
+          on robot autonomy.  I have a broad interest in various topics, so please
+          feel free to reach out for potential projects and collaborations!
         </p>
       </div>
       <img src="image.jpeg" alt="Meraj Mammadov" class="profile-picture" />
     </section>
   
-
+<!-- 
     <section class="projects">
       <h2>Projects</h2>
       <div class="project">
         <h3> To be added...</h3>
-        <!-- <h3> A very interesting project</h3> -->
-        <!-- <p>Description of a very interesting project will be here.</p> -->
+        <h3> A very interesting project</h3>
+        <p>Description of a very interesting project will be here.</p>
       </div>
-    </section>
+    </section> -->
   </div>
 </body>
 </html>
