no dot, final touches

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <div class="container">
-    <h1>Meraj Mammadov.</h1>
+    <h1>Meraj Mammadov</h1>
     <nav class="nav">
       <a href="#Curriculum Vitae">cv</a>
       <a href="#merajpt">merajpt</a>
