preps for merajpt

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>Meraj Mammadov</h1>
     <nav class="nav">
       <a href="#Curriculum Vitae">cv</a>
-      <a href="#merajpt">merajpt</a>
+      <a href="merajpt.html">merajpt</a>
       <a href="#chess">chess</a>
       <a href="#contact">contact</a>
 
