generator design change

--- a/merajpt.html
+++ b/merajpt.html
@@ -38,9 +38,9 @@
       </div>
     </nav>
   
-    <div class = generator>
+    <div class = generator id="generator">
       <input type="text" class="input_box" id="inputText" placeholder="Number of chars">
-      <button onclick="generateText()" class="generate_box">Generate</button>
+      <button onclick="generateText()" class="generate_button" id="generate_button">Generate</button>
     </div>
     <p id="output" class="output_box"></p>
   </div>
