output box resized

--- a/merajpt.html
+++ b/merajpt.html
@@ -39,7 +39,7 @@
     </nav>
   
     <div class = generator id="generator">
-      <input type="text" class="input_box" id="inputText" placeholder="Number of chars">
+      <input type="text" class="input_box" id="inputText" maxlength = 5 inputmode="numeric" placeholder="Number of chars">
       <button onclick="generateText()" class="generate_button" id="generate_button">Generate</button>
     </div>
     <p id="output" class="output_box"></p>
