dir reconstruction, dataset selection

--- a/html/index.html
+++ b/html/index.html
@@ -13,9 +13,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Meraj Mammadov</title>
-  <link rel="favicon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" href="styles.css" />
-  <script src="scripts.js" defer></script>
+  <link rel="favicon" type="image/x-icon" href="/img/favicon.ico" />
+  <link rel="stylesheet" href="/css/skeleton.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
+  <script src="/js/common.js" defer></script>
   <link
     href="https://fonts.googleapis.com/css?family=Lato:400,700"
     rel="stylesheet"
@@ -28,7 +29,7 @@
     <h1>Meraj Mammadov</h1>
     <nav class="nav">
       <a href="#Curriculum Vitae">cv</a>
-      <a href="merajpt.html">merajpt</a>
+      <a href="/html/merajpt.html">merajpt</a>
       <a href="#chess">chess</a>
       <a href="#contact">contact</a>
 
@@ -64,7 +65,7 @@
           feel free to reach out for potential projects and collaborations!
         </p>
       </div>
-      <img src="image.jpeg" alt="Meraj Mammadov" class="profile-picture" />
+      <img src="/img/image.jpeg" alt="Meraj Mammadov" class="profile-picture" />
     </section>
   
 <!-- 
