disabling the selected button

--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -28,10 +28,10 @@
   <div class="container">
     <h1>Meraj Mammadov</h1>
     <nav class="nav">
-      <a href="/html/index.html">cv</a>
+      <a href="/index.html">cv</a>
       <a href="/html/merajpt.html">merajpt</a>
-      <a href="/html/index.html">chess</a>
-      <a href="/html/index.html">contact</a>
+      <a href="/index.html">chess</a>
+      <a href="/index.html">contact</a>
 
       <div class="darkmode-container">
         <input type="checkbox" id="dark-mode-toggle"/>
